Implement webhook functionality for automated deployment and add deployer service

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,13 @@ CORS_ORIGINS=*
 # ===========================================
 # Database directory (for Docker volume)
 DB_DIR=/app/calendar_data
+
+# ===========================================
+# 🔄 Webhook Configuration
+# ===========================================
+# URL del deployer interno (non modificare in produzione)
+DEPLOYER_URL=http://webhook_listener:9000/webhook
+
+# Secret per validare le richieste webhook (opzionale ma consigliato)
+# Genera con: python -c "import secrets; print(secrets.token_hex(32))"
+# WEBHOOK_SECRET=
