--- a/requirements.txt
+++ b/requirements.txt
@@ -19,8 +19,10 @@ requests==2.32.5
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
+APScheduler==3.10.4
+pywebpush==1.14.0
+icalendar
 
 # Production dependencies (decommentare per deploy)
 # gunicorn==21.2.0
 # eventlet==0.33.3
-icalendar
