--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-Authlib==1.6.5
+apscheduler==3.10.4
+authlib==1.6.5
+bidict==0.23.1
 blinker==1.9.0
 certifi==2025.10.5
 cffi==2.0.0
@@ -6,23 +8,32 @@ charset-normalizer==3.4.3
 click==8.3.0
 cryptography==46.0.2
 dotenv==0.9.9
-Flask==3.1.2
+flask==3.1.2
 flask-socketio==5.4.1
-python-socketio==5.14.0
+h11==0.16.0
+http-ece==1.2.1
+icalendar==6.3.1
 idna==3.11
 itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.3
+jinja2==3.1.6
+markupsafe==3.0.3
+packaging==25.0
+pip==25.2
+py-vapid==1.9.2
 pycparser==2.23
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-engineio==4.12.3
+python-socketio==5.14.0
+pytz==2025.2
+pywebpush==2.1.1
 requests==2.32.5
-typing_extensions==4.15.0
+setuptools==80.9.0
+simple-websocket==1.1.0
+six==1.17.0
+typing-extensions==4.15.0
+tzdata==2025.2
+tzlocal==5.3.1
 urllib3==2.5.0
-Werkzeug==3.1.3
-APScheduler==3.10.4
-pywebpush==1.14.0
-icalendar
-
-# Production dependencies (decommentare per deploy)
-# gunicorn==21.2.0
-# eventlet==0.33.3
+werkzeug==3.1.3
+wsproto==1.2.0
